# chrono-ctx

./: .dockerignore  .gitignore  README.md  config.example.yaml  db.sqlite  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/: db_handler.py
collectors/: db_handler.py  gateway.py
collectors/adapters/: local_adapter.py
collectors/shared/: config.py  functions.py  types.py
data/: db.sqlite  schema.sql
data/blobs/configs/: config.blob
knowledge.example/prompts/: sample-4.md
knowledge.example/workflows/: cd.yaml  ci.yaml  github-ci.yaml
src/app/api/: server.py
src/app/api/router/v1/: vcs.py
src/app/cli/: app.py  cli_app.py
src/app/mcp/: server.py
src/utils/: formatter.py  helper.py  logger.py
src/vcs/: db_handler.py  gateway.py  initialize.py  runtime.py
src/vcs/adapters/: local_adapter.py
src/vcs/db/: sqlite.py
src/vcs/services/: audit.py  configure.py  db.py  versioning.py
src/vcs/shared/: config.py  temp_file.py  types.py
src/vcs/workers/: consumer_worker.py  local_watcher.py
src/vcs/workers/config/: config_consumer.py
src/vcs/workers/interfaces/: consumer.py  event_broker.py
src/vcs/workers/local/: local_consumer.py  local_queue.py  local_runtime.py  local_watcher.py  utils.py
tests/: conftest.py  test_placeholder.py
tests/fixture/: db.py
tests/fixtures/: db.py  schema.sql  seed.py
tests/integration/vcs/services/: test_versioning.py
tests/unit/vcs/services/: test_versioning.py
utils/: helper.py  logger.py
