[project]
name = "chrono-ctx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.14.1",
    "certifi>=2026.6.17",
    "charset-normalizer>=3.4.7",
    "fastmcp>=3.4.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.18",
    "python-dotenv>=1.2.2",
    "python-ulid>=3.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "typer>=0.26.8",
    "typing-extensions>=4.15.0",
    "urllib3>=2.7.0",
    "watchdog>=6.0.0",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff"
]